Slight adjustments, removed beta version marker.

--- a/sfpmg052015.slides.html
+++ b/sfpmg052015.slides.html
@@ -529,7 +529,7 @@ git commit -v -m "Fixed bug #42"</code></pre>
 <div class="text_cell_render border-box-sizing rendered_html">
 <ul>
 <li>We create a parser, add arguments, parse, then call <code>greet</code></li>
-<li>Redundant</li>
+<li>Redundant when it's informations that's already there</li>
 <li>Python makes the signature available</li>
 <li>Let's use that</li>
 </ul>
@@ -968,7 +968,7 @@ Other actions:
 <li>parameters work just like in python, so <code>*args</code> works</li>
 <li>things like (short) parameter aliases don't exit in py, so annotation</li>
 </ul>
-<p>Next: composing functions together</p>
+<p>Next: Because we deal with functions... neat stuff!</p>
 
 </div>
 </div>
@@ -1088,8 +1088,9 @@ Other actions:
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="pip-install---user-clize==3.0b1"><code>pip install --user clize==3.0b1</code><a class="anchor-link" href="#pip-install---user-clize==3.0b1">&#182;</a></h1><p><a href="https://clize.readthedocs.org/">https://clize.readthedocs.org/</a></p>
+<h1 id="pip-install---user-clize"><code>pip install --user clize</code><a class="anchor-link" href="#pip-install---user-clize">&#182;</a></h1><p><a href="https://clize.readthedocs.org/">https://clize.readthedocs.org/</a></p>
 <p><a href="https://plus.google.com/communities/101146333300650079362">Clize community on Google+</a></p>
+<p><a href="http://epsy.github.io/clize/">http://epsy.github.io/clize/</a></p>
 <h3 id="Yann-Kaiser">Yann Kaiser<a class="anchor-link" href="#Yann-Kaiser">&#182;</a></h3><p><a href="https://twitter.com/YannKsr">@YannKsr</a></p>
 <p><a href="mailto:kaiser.yann@gmail.com">kaiser.yann@gmail.com</a></p>
 
@@ -1103,7 +1104,6 @@ Other actions:
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <ul>
-<li>Caution beta</li>
 <li>Check RTD for tutorials</li>
 <li>need help for FAQ page</li>
 <li>will post slides link on meetup group</li>
