Qualified slides link with lightning talk

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <h2>Talks</h2>
     <ul>
       <li>San Francisco Python Meetup Group, May 2015:<br/>
+          Lightning talk:
           <a href="sfpmg052015.slides.html">
             Clize: A Python approach to argument parsing</a>
           </li>
