--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Clize links</title>
-    <link href="/indexstyle.css" rel="stylesheet" type="text/css" />
+    <link href="indexstyle.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <h1>Clize links</h1>
