Added a quick line about myself.

--- a/sfpmg052015.slides.html
+++ b/sfpmg052015.slides.html
@@ -222,7 +222,9 @@ div.output_prompt {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="Clize">Clize<a class="anchor-link" href="#Clize">&#182;</a></h1><h2 id="A-Python-approach-to-command-line-argument-parsing">A Python approach to command-line argument parsing<a class="anchor-link" href="#A-Python-approach-to-command-line-argument-parsing">&#182;</a></h2><p>Yann Kaiser - <a href="https://twitter.com/YannKsr">@YannKsr</a></p>
+<h1 id="Clize">Clize<a class="anchor-link" href="#Clize">&#182;</a></h1><h2 id="A-Python-approach-to-command-line-argument-parsing">A Python approach to command-line argument parsing<a class="anchor-link" href="#A-Python-approach-to-command-line-argument-parsing">&#182;</a></h2><p><strong>Yann Kaiser</strong></p>
+<p>Full-time student from France!</p>
+<p><a href="https://twitter.com/YannKsr">@YannKsr</a></p>
 
 </div>
 </div>
